--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,41 @@ jobs:
           username: "ubuntu"
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "."
-          target: /docker/point-system/
+          target: /name: "Deploy para vps"
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build_deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Baixar o codigo"
+        uses: actions/checkout@v4
+
+      - name: "Copiar arquivos para ec2"
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: "184.73.229.124"
+          username: "ubuntu"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "."
+          target: /home/ubuntu/www/src/
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            port: ${{ secrets.PORT }}
+            script: |
+                docker-compose down &&
+                docker-compose build &&
+                docker-compose up -d
+
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.3
