--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: "Deploy para vps"
+
 on:
   push:
     branches:
@@ -9,60 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Baixar o codigo"
+      - name: "Baixar o código"
         uses: actions/checkout@v4
 
-      - name: "Copiar arquivos para ec2"
+      - name: "Copiar arquivos para EC2"
         uses: appleboy/scp-action@v0.1.7
         with:
           host: "184.73.229.124"
           username: "ubuntu"
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "."
-          target: /name: "Deploy para vps"
-on:
-  push:
-    branches:
-      - main
+          target: "/home/ubuntu/www/src/"
 
-jobs:
-  build_deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: "Baixar o codigo"
-        uses: actions/checkout@v4
-
-      - name: "Copiar arquivos para ec2"
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: "184.73.229.124"
-          username: "ubuntu"
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "."
-          target: /home/ubuntu/www/src/
-
-      - name: executing remote ssh commands using password
+      - name: "Executar comandos remotos via SSH"
         uses: appleboy/ssh-action@v1.0.3
         with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USERNAME }}
-            password: ${{ secrets.PASSWORD }}
-            port: ${{ secrets.PORT }}
-            script: |
-                docker-compose down &&
-                docker-compose build &&
-                docker-compose up -d
-
-
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USERNAME }}
-            password: ${{ secrets.PASSWORD }}
-            port: ${{ secrets.PORT }}
-            script: |
-                docker-compose down &&
-                docker-compose build &&
-                docker-compose up -d
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd /home/ubuntu/www/src/
+            docker-compose down
+            docker-compose build
+            docker-compose up -d
